texi2html/test/invalid/res/texi_recursive_copying/recursive_copying.texi
\input texinfo @c -*-texinfo-*-

@setfilename recursive_copying.info

@copying

In copying.

@insertcopying
@end copying

@node Top
@top Test recursive copying

Test recursive copying.

@insertcopying

@bye
